--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -227,18 +227,18 @@
           </ul>
           <p class="quote-content"><strong><span style="text-decoration: underline;">Publication Chair: </span></strong></p>
           <ul class="contact-list">
-            <li>Yifan Peng, PhD, Assistant Professor, Population Health Sciences, Weill Cornell Medicine, NY, US. <a class="contact-a" href="mailto:yip4002@med.cornell.edu">email</a></li>
+            <li>Yifan Peng (Weill Cornell Medicine) <a class="contact-a" href="mailto:yip4002@med.cornell.edu">email</a></li>
           </ul>
           <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
           <ul class="contact-list">
-            <li>Dina Demner Fushman, MD, PhD, Scientist, Lister Hill Center, National Library of Medicine, US. <a href="mailto:ddemner@mail.nih.gov">email</a></li>
-            <li>Wendy Chapman, PhD, Professor and Director, Centre for Digital Transformation of Health, The University of Melbourne, Australia <a href="mailto:wendy.chapman@unimelb.edu.au">email</a></li>
-            <li>Buzhou Tang, PhD, Associate Professor, Department of Computer Science, Harbin Institute of Technology, Shenzhen, China. <a href="mailto:tangbuzhou@gmail.com">email</a></li>
-            <li>Ozlem Uzuner, PhD, Associate Professor, Information Sciences and Technology, George Mason University, Fairfax, VA, US. <a href="mailto:ouzuner@gmu.edu">email</a></li>
-            <li>Karin Verspoor, PhD, Dean, School of Computing Technologies, RMIT University, Melbourne, Australia <a href="mailto:karin.verspoor@rmit.edu.au">email</a></li>
-            <li>Hongfang Liu, Professor, Biomedical Informatics, Mayo Clinic, Rochester, MN, US. <a href="mailto:Liu.Hongfang@mayo.edu">email</a>
-            <li>Stephane Meystre, MD, PhD, Chair and Founding Director, Translational Biomedical Informatics Center, Associate Professor, Psychiatry Department and Biomedical Informatics Center, Medical University of South Carolina, US. <a class="contact-a" href="mailto:meystre@musc.edu">email </a>  </li> 
-            <li>Yanshan Wang, Assistant Professor, Department of AI & Informatics, Mayo Clinic, Rochester, MN, US. <a href="mailto:Wang.yanshan@mayo.edu">email</a></li>
+            <li>Dina Demner Fushman (National Library of Medicine/NIH)</li>
+            <li>Wendy Chapman (The University of Melbourne)</li>
+            <li>Buzhou Tang (Harbin Institute of Technology)</li>
+            <li>Ozlem Uzuner (George Mason University)</li>
+            <li>Karin Verspoor (RMIT University)</li>
+            <li>Hongfang Liu (Mayo Clinic)</li>
+            <li>Stephane Meystre  (edical University of South Carolina)</li> 
+            <li>Yanshan Wang (Mayo Clinic)</li>
             <!--
             <li>Guergana Savova, PhD, Associate Professor, Harvard Medical School and Children’s Hospital Boston, Boston, MA, US. <a class="contact-a" href="mailto:Guergana.Savova@childrens.harvard.edu">email </a>  </li>
             -->
