--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -30,16 +30,16 @@
   font-size:19px;
   font-weight: 300; }
   </style>
-  <link href="./Health NLP 2021_files/css" rel="stylesheet">
+  <link href="./Health NLP 2021_files/css.css" rel="stylesheet">
   <link rel="stylesheet" id="contact-form-7-css" href="./Health NLP 2021_files/styles.css" type="text/css" media="all">
   <link rel="stylesheet" id="NextGEN-css" href="./Health NLP 2021_files/nggallery.css" type="text/css" media="screen">
   <link rel="stylesheet" id="NextCellent-Framework-css" href="./Health NLP 2021_files/framework-min.css" type="text/css" media="screen">
-  <link rel="stylesheet" id="tyler-google-font-css" href="./Health NLP 2021_files/css(1)" type="text/css" media="all">
-  <link rel="stylesheet" id="conveyux-google-font-css" href="./Health NLP 2021_files/css(2)" type="text/css" media="all">
+  <link rel="stylesheet" id="tyler-google-font-css" href="./Health NLP 2021_files/css1.css" type="text/css" media="all">
+  <link rel="stylesheet" id="conveyux-google-font-css" href="./Health NLP 2021_files/css2.css)" type="text/css" media="all">
   <link rel="stylesheet" id="tyler-blueimp-gallery-css" href="./Health NLP 2021_files/blueimp-gallery.min.css" type="text/css" media="all">
   <link rel="stylesheet" id="tyler-jquery-scrollpane-css" href="./Health NLP 2021_files/jquery.scrollpane.css" type="text/css" media="all">
   <link rel="stylesheet" id="tyler-icons-css" href="./Health NLP 2021_files/icon.css" type="text/css" media="all">
-  <link rel="stylesheet" id="convey-layout-css" href="./Health NLP 2021_files/style(1).css" type="text/css" media="all">
+  <link rel="stylesheet" id="convey-layout-css" href="./Health NLP 2021_files/style1.css" type="text/css" media="all">
   <script type="text/javascript" src="./Health NLP 2021_files/jquery.js"></script>
   <script type="text/javascript" src="./Health NLP 2021_files/jquery-migrate.min.js"></script>
   <script type="text/javascript" src="./Health NLP 2021_files/owl.carousel.min.js"></script>
@@ -300,16 +300,12 @@
       <div id="tile_contact" class="widget widget-contact">
         <div class="container">
           <div class="widget-header">
-            <h2 class="widget-heading">Contact Us</h2>
-            <table>
-              <tbody><tr>
-                <td>
-                  <ul class="quote-content" style="padding-left:0; list-style: none; margin-top:-20px">
-                    <li><h3 style="font-size: 22px;margin-left:20px;color:#fff">Hua Xu<a class="contact-a" href="mailto:Hua.Xu@uth.tmc.edu">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;email</a></h3></li>
-                  </ul>
-                </td>
-              </tr>
-            </tbody></table>
+            <h2 class="widget-heading" style="margin-left:-15px">Contact Us</h2>
+                  <!-- <ul class="quote-content" style="padding-left:0; list-style: none; margin-top:-20px"> -->
+                  <span style="font-size: 22px;color:#fff">Rui Zhang <a class="contact-a" href="mailto:zhan1386@umn.edu">email</a>,
+                  Hua Xu <a class="contact-a" href="mailto:Hua.Xu@uth.tmc.edu">email</a>,
+                  Yifan Peng <a class="contact-a" href="mailto:yip4002@med.cornell.edu">email</a></span>
+                  <!-- </ul> -->
           </div>
         </div>
       </div>
