--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -227,7 +227,7 @@
           </ul>
           <p class="quote-content"><strong><span style="text-decoration: underline;">Publication Chair: </span></strong></p>
           <ul class="contact-list">
-            <li>Yifan Peng (Weill Cornell Medicine) <a class="contact-a" href="mailto:yip4002@med.cornell.edu">email</a></li>
+            <li><a class="contact-a" href="mailto:yip4002@med.cornell.edu">Yifan Peng</a> (Weill Cornell Medicine)</li>
           </ul>
           <p class="quote-content"><strong><span style="text-decoration: underline;">Steering committee: </span></strong></p>
           <ul class="contact-list">
@@ -302,9 +302,9 @@
           <div class="widget-header">
             <h2 class="widget-heading" style="margin-left:-15px">Contact Us</h2>
                   <!-- <ul class="quote-content" style="padding-left:0; list-style: none; margin-top:-20px"> -->
-                  <span style="font-size: 22px;color:#fff">Rui Zhang <a class="contact-a" href="mailto:zhan1386@umn.edu">email</a>,
-                  Hua Xu <a class="contact-a" href="mailto:Hua.Xu@uth.tmc.edu">email</a>,
-                  Yifan Peng <a class="contact-a" href="mailto:yip4002@med.cornell.edu">email</a></span>
+                  <span style="font-size: 22px;color:#fff"><a class="contact-a" href="mailto:zhan1386@umn.edu">Rui Zhang</a>,
+                  <a class="contact-a" href="mailto:Hua.Xu@uth.tmc.edu">Hua Xu</a>,
+                  <a class="contact-a" href="mailto:yip4002@med.cornell.edu">Yifan Peng</a></span>
                   <!-- </ul> -->
           </div>
         </div>
