--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -92,8 +92,11 @@
         <div class="widget-header">
           <!-- Introduction -->
           <h2 class="widget-body">Introduction</h2>
+
           <p class="quote-content">In the past few decades, growing adoption of electronic health records (EHRs) systems have made massive clinical narrative data available electronically. Natural language processing (NLP) technologies that can unlock information from narrative text have received great attention in the medical domain. Many clinical NLP methods and systems have been developed and showed promising results in various information extraction tasks. These methods and tools have also been successfully applied to facilitate clinical research, as well as to support healthcare applications. At the same time, the availability and use of health information online has exploded through use of social media, question-answering and community discussion forums, and health-related websites. These present additional challenges and opportunities for further development of new methodologies and healthcare applications.</p>
-          <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations. The workshop will be held on August 9th, 2021, virtually at Victoria, Canada, in conjunction with the IEEE International Conference on Healthcare Informatics (<span style="color: #0000ff;"><a href="https://ichi2021.institute4hi.org" target="_blank">ICHI 2021</a></span>). Due to the uncertainty of current pandemics, we are going virtual with the workshop.</p>
+
+          <p class="quote-content">The goal of this workshop is to provide a unique platform to bring together researchers and practitioners in healthcare informatics working with health-related free text, and facilitate close interaction among students, scholars, and industry professionals on health NLP challenges worldwide. This is a one-day workshop that consists of invited speakers, podium talks, and poster presentations. The workshop will be held on <strong>August 9th, 2021</strong>, virtually at Victoria, Canada, in conjunction with the IEEE International Conference on Healthcare Informatics (<a href="https://ichi2021.institute4hi.org">ICHI 2021</a>). Due to the uncertainty of current pandemics, we are going virtual with the workshop.</p>
+
           <p class="quote-content">We invite papers and short abstracts on novel approaches, works in progress, comparative analyses of tools, and original state-of-the-art work in health NLP methods, tools, and applications. Selected papers will be presented as podium talks, and other interesting submissions and abstracts will be showcased as poster presentations.</p>
         </div>
       </div>
@@ -209,7 +212,7 @@
         <div class="widget-header">
           <div>
             <h2 class="widget-body">Submission and Review</h2>
-            <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<span style="color: #0000ff;"><a href="https://easychair.org/conferences/?conf=healthnlp2021" target="_blank">https://easychair.org/conferences/?conf=healthnlp2021</a></span>). For more information, please read the detailed submission instructions (<span style="color: #0000ff;"><a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">link here</a></span>).</p>
+            <p class="quote-content">Authors may submit regular papers (4-10 pages, including references) and abstracts (2 pages, including references) in the format used for the ICHI submissions. Developers of NLP tools may submit a demo paper (up to 4 pages, including references) describing the tool, along with a link to a web demonstration (interactive website or a demonstration video). As with ICHI, the workshop will follow single-blind reviewing, therefore submissions should have the names and affiliations of authors listed on the paper. Papers must adhere to the IEEE Proceedings Format available for LaTeX and Word, and submitted as a single PDF file. Submissions will be handled electronically through EasyChair (<a href="https://easychair.org/conferences/?conf=healthnlp2021">https://easychair.org/conferences/?conf=healthnlp2021</a>). For more information, please read the detailed submission instructions (<a href="https://www.ieee.org/conferences_events/conferences/publishing/templates.html">link here</a>).</p>
             <p class="quote-content">All submissions will undergo a peer review by at least two domain experts from the program committee. The selection of papers and posters will be primarily based on the potential to generate discussion and impact future research directions. Accepted papers will be included in the ICHI 2021 Proceedings and IEEE Digital Library. Selected papers will be invited to publish an extended version of their work in a special issue of <strong>BMC Medical Informatics and Decision Making journal (IF=2.317) with a discount publication fee</strong>.</p>
           </div>
         </div>
@@ -282,9 +285,9 @@
           <div>
             <h2 class="widget-body" style="margin-left:-15px">Past workshops</h2>
             <ul class="quote-content">
-              <li><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020" target="_blank">HealthNLP2020</a></li>
-              <li><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019" target="_blank">HealthNLP2019</a></li>
-              <li><a href="https://ohnlp.github.io/HealthNLP2018/healthnlp2018" target="_blank">HealthNLP2018</a></li>
+              <li><a href="https://ohnlp.github.io/HealthNLP2020/healthnlp2020" target="_blank">HealthNLP 2020</a></li>
+              <li><a href="https://ohnlp.github.io/HealthNLP2019/healthnlp2019" target="_blank">HealthNLP 2019</a></li>
+              <li><a href="https://ohnlp.github.io/HealthNLP2018/healthnlp2018" target="_blank">HealthNLP 2018</a></li>
             </ul>
           </div>
         </div>
