--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -49,7 +49,7 @@
 <body class="home blog header-sticky">
   <header class="nav header sticky">
     <div class="header-container">
-      <a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021" id="logo" class="header-logo">
+      <a href="#" id="logo" class="header-logo">
         <img class="header-logo-img" src="./Health NLP 2021_files/HealthNLP2021.png" alt="HealthNLP 2021" title="HealthNLP 2021">
       </a>
       <nav class="navbar" role="navigation">
@@ -57,14 +57,14 @@
         <div class="collapse navbar-collapse" id="tyler-navigation">
           <div class="menu-current-container">
             <ul id="menu-prmiary" class="navbar-menu">
-              <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#">Home</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#introduction">Introduction</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page audience"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#audience">Audience</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#dates">Important dates</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#submissions">Submissions</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#organization">Organizers</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#past">Past Workshops</a></li>
-              <li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="https://ohnlp.github.io/HealthNLP2021/healthnlp2021#contact">Contact Us</a></li>
+              <li class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item home"><a href="#">Home</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page introduction"><a href="#introduction">Introduction</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page audience"><a href="#audience">Audience</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children dates"><a href="#dates">Important dates</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children submissions"><a href="#submissions">Submissions</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page organization"><a href="#organization">Organizers</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="#past">Past Workshops</a></li>
+              <li class="menu-item menu-item-type-post_type menu-item-object-page contact"><a href="#contact">Contact Us</a></li>
             </ul>
           </div>
         </div>
