--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -199,7 +199,7 @@
             <ul class="quote-content">
               <li>Deadline for all submissions: <strong><strike>May 1<sup>st</sup>, 2021</strike></strong></li>
               <li>Notification of decisions: <strong><strike>May 15<sup>th</sup>, 2021</strike></strong></li>
-              <li>Deadline for camera-ready papers: <strong><strike>May 21<sup>st</sup>,</strike>  <font color="red">May 24<sup>st</sup></font>, 2021</strong></li>
+              <li>Deadline for camera-ready papers: <strong><strike>May 21<sup>st</sup>,</strike>  <font color="red">TBD</font></strong></li>
               <li>Workshop date: <strong>August 9<sup>th</sup>, 2021</strong></li>
             </ul>
           </div>
