--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -196,7 +196,7 @@
         <div class="widget-header">
           <div>
             <h2 class="widget-body">Important dates</h2>
-            <ul class="quote-content">
+            <ul class="contact-list">
               <li>Deadline for all submissions: <strong><strike>May 1<sup>st</sup>, 2021</strike></strong></li>
               <li>Notification of decisions: <strong><strike>May 15<sup>th</sup>, 2021</strike></strong></li>
               <li>Deadline for camera-ready papers: <strong><strike>May 21<sup>st</sup>,</strike>  <font color="red">TBD</font></strong></li>
