--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -225,8 +225,8 @@ table.tg  {
 
     <p>Target audience includes both health NLP researchers and consumers. Anyone interested in NLP-based approaches, solutions, and applications in clinical, biomedical, and consumer health informatics is welcome. Researchers and students working on health NLP projects and others interested in learning about and sharing NLP knowledge and resources are strongly encouraged to attend. We also welcome students who wish to closely interact with NLP experts. Potential attendees may come from NLP communities in the medical domain (e.g., AMIA NLP Working Group, BioNLP) and computer and information scientists and linguists working on health-related text processing (e.g., with interests in ACL, EMNLP, NAACL, TREC Precision Medicine and Clinical Decision Support tracks, etc.), as well as general health informatics professionals and researchers.</p>
 
-    <h1 id="agenda">Tentative Schedule</h1>
-    <span style="font-size: 1.2em;color:red;font-weight: bold">7:00 am - 13:00 pm Victoria time (14:00 p.m. - 20:00 p.m. UTC)</span>
+    <h1 id="agenda">Agenda</h1>
+    <span style="font-size: 1.2em;color:red;font-weight: bold">HealthNLP is scheduled as: 7:00 am - 13:00 pm, Victoria time (14:00 pm - 20:00 pm UTC)</span>
     <table class="tg">
       <tr>
         <td class="tg-break">7:00am</td>
