--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -234,7 +234,7 @@ table.tg  {
       </tr>
       <tr>
         <td class="tg-0lax">7:10am</td>
-        <td class="tg-0lax"><b>Keynote</td>
+        <td class="tg-0lax"><b>Keynote, Dina Demner Fushman, NLM/NIH</td>
       </tr>
       <tr>
         <td class="tg-0lax">7:45am</td>
@@ -304,10 +304,10 @@ table.tg  {
         <td class="tg-0lax">12:30pm</td>
         <td class="tg-0lax"><b>Impact of detecting clinical trial elements in exploration of COVID-19 literature</b><br>Simon Suster, Karin Verspoor, Timothy Baldwin, Jey Han Lau, Antonio Jimeno, David Martinez and Yulia Otmakhova</td>
       </tr>
-      <tr>
+<!--       <tr>
         <td class="tg-break">12:45pm</td>
         <td class="tg-break"><b>Closing marks</b>, Hua Xu</td>
-      </tr>
+      </tr> -->
     </table>
 <!--     <table class="tg">
       <tr>
