--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -234,7 +234,7 @@ table.tg  {
       </tr>
       <tr>
         <td class="tg-0lax">7:10am</td>
-        <td class="tg-0lax"><b>Keynote, Dina Demner Fushman, NLM/NIH</td>
+        <td class="tg-0lax"><b>Keynote</b><br>Dina Demner Fushman, NLM/NIH</td>
       </tr>
       <tr>
         <td class="tg-0lax">7:45am</td>
