--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -421,6 +421,7 @@ table.tg  {
       <li>Notification of decisions: <strong><strike>May 15<sup>th</sup>, 2021</strike></strong></li>
       <li>Deadline for camera-ready papers: <strong><strike>May 30<sup>st</sup>, 2021</strike></strong></li>
       <li>Workshop date: <strong>August 9<sup>th</sup>, 2021</strong></li>
+      <li>Deadline for BMC Medical Informatics and Decision Making submissions: <strong>August 31<sup>th</sup>, 2021</strong></li>
     </ul>
 
     <h1 id="submissions">Submission and Review</h1>
