--- a/healthnlp2021.html
+++ b/healthnlp2021.html
@@ -421,7 +421,7 @@ table.tg  {
       <li>Deadline for all submissions: <strong><strike>May 1<sup>st</sup>, 2021</strike></strong></li>
       <li>Notification of decisions: <strong><strike>May 15<sup>th</sup>, 2021</strike></strong></li>
       <li>Deadline for camera-ready papers: <strong><strike>May 30<sup>st</sup>, 2021</strike></strong></li>
-      <li>Workshop date: <strong>August 9<sup>th</sup>, 2021</strong></li>
+      <li>Workshop date: <strong><strike>August 9<sup>th</sup>, 2021</strike></strong></li>
       <li>Deadline for BMC Medical Informatics and Decision Making submissions: <strong>August 31<sup>th</sup>, 2021</strong></li>
     </ul>
 
@@ -487,8 +487,6 @@ table.tg  {
       <li>Yoshinobu Kano (Shizuoka University)</li>
       <li>Zhengxing Huang (Zhejiang University)</li>
     </ul>
-
-    <p>More to be updated...</p>
 
     <h1 id="past">Past workshops</h1>
     <ul>
